Fix the bug wwith non-collapsable and active breadcrumbs

--- a/src/less/blocks/icon.less
+++ b/src/less/blocks/icon.less
@@ -22,4 +22,21 @@
     height: 37px;
     border-radius: 50%;
   }
+
+  .tag-type(@name, @color) {
+    &--type {
+      &_@{name} {
+        border-color: @color;
+        background-color: @color;
+      }
+    }
+  }
+
+  .tag-type(@name: ~"hashtag", @color: #689ACA);
+  .tag-type(@name: ~"school", @color: #DC3457);
+  .tag-type(@name: ~"geotag", @color: #47B8E7);
+
+  &--inactive {
+    background-color: #d0d0d0;
+  }
 }
