--- a/src/less/blocks/tag.less
+++ b/src/less/blocks/tag.less
@@ -111,11 +111,6 @@
   .tag-type(@name, @color) {
     &--@{name} {
       border-color: @color;
-
-      .tag__icon {
-        border-color: @color;
-        background-color: @color;
-      }
     }
   }
 
